--- a/.github/workflows/Ofox build.yml
+++ b/.github/workflows/Ofox build.yml
@@ -1,4 +1,4 @@
-name: Pb Build
+name: Ofox Build
 
 on:
   workflow_dispatch:
@@ -6,11 +6,11 @@ on:
       MANIFEST_URL:
         description: 'MANIFEST_URL (if want to use SSH keys, use git@github.com:XXXXX)'
         required: true
-        default: 'https://github.com/PitchBlackRecoveryProject/manifest_pb'
+        default: 'https://gitlab.com/OrangeFox/sync'
       MANIFEST_BRANCH:
         description: 'MANIFEST_BRANCH'
         required: true
-        default: 'android-11.0'
+        default: 'master'
       DEVICE_TREE_URL:
         description: 'DEVICE_TREE_URL'
         required: true
@@ -18,7 +18,7 @@ on:
       DEVICE_TREE_BRANCH:
         description: 'DEVICE_TREE_BRANCH'
         required: true
-        default: 'pb-11'
+        default: 'ofox-11'
       DEVICE_PATH:
         description: 'DEVICE_PATH'
         required: true
